version_08_intermedia_07/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> FunctionList
Rule 2     FunctionList -> FunctionList FunctionDecl
Rule 3     FunctionList -> FunctionDecl
Rule 4     FunctionDecl -> Type ID ( ParamList ) Block
Rule 5     FunctionDecl -> Type ID ( ) Block
Rule 6     ParamList -> ParamList , Param
Rule 7     ParamList -> Param
Rule 8     Param -> Type ID
Rule 9     Block -> { Declarations Statements }
Rule 10    Declarations -> Declarations Declaration
Rule 11    Declarations -> empty
Rule 12    Declaration -> Type ID ;
Rule 13    Type -> INT
Rule 14    Type -> FLOAT
Rule 15    Type -> VOID
Rule 16    Statements -> Statements Statement
Rule 17    Statements -> empty
Rule 18    Statement -> Assignment
Rule 19    Statement -> IfStatement
Rule 20    Statement -> ReturnStatement
Rule 21    Statement -> Block
Rule 22    Assignment -> ID = Expression ;
Rule 23    IfStatement -> IF ( Expression ) Block
Rule 24    IfStatement -> IF ( Expression ) Block ELSE Block
Rule 25    ReturnStatement -> RETURN Expression ;
Rule 26    Expression -> Expression EQ Relation
Rule 27    Expression -> Expression NE Relation
Rule 28    Expression -> Expression < Relation
Rule 29    Expression -> Expression LE Relation
Rule 30    Expression -> Expression > Relation
Rule 31    Expression -> Expression GE Relation
Rule 32    Expression -> Relation
Rule 33    Relation -> Relation + Term
Rule 34    Relation -> Relation - Term
Rule 35    Relation -> Term
Rule 36    Term -> Term * Factor
Rule 37    Term -> Term / Factor
Rule 38    Term -> Factor
Rule 39    Factor -> INTLIT
Rule 40    Factor -> FLOATLIT
Rule 41    Factor -> ID
Rule 42    Factor -> ( Expression )
Rule 43    empty -> <empty>

Terminals, with rules where they appear

(                    : 4 5 23 24 42
)                    : 4 5 23 24 42
*                    : 36
+                    : 33
,                    : 6
-                    : 34
/                    : 37
;                    : 12 22 25
<                    : 28
=                    : 22
>                    : 30
ELSE                 : 24
EQ                   : 26
FLOAT                : 14
FLOATLIT             : 40
GE                   : 31
ID                   : 4 5 8 12 22 41
IF                   : 23 24
INT                  : 13
INTLIT               : 39
LE                   : 29
NE                   : 27
RETURN               : 25
VOID                 : 15
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

Assignment           : 18
Block                : 4 5 21 23 24 24
Declaration          : 10
Declarations         : 9 10
Expression           : 22 23 24 25 26 27 28 29 30 31 42
Factor               : 36 37 38
FunctionDecl         : 2 3
FunctionList         : 1 2
IfStatement          : 19
Param                : 6 7
ParamList            : 4 6
Program              : 0
Relation             : 26 27 28 29 30 31 32 33 34
ReturnStatement      : 20
Statement            : 16
Statements           : 9 16
Term                 : 33 34 35 36 37
Type                 : 4 5 8 12
empty                : 11 17

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . FunctionList
    (2) FunctionList -> . FunctionList FunctionDecl
    (3) FunctionList -> . FunctionDecl
    (4) FunctionDecl -> . Type ID ( ParamList ) Block
    (5) FunctionDecl -> . Type ID ( ) Block
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Program                        shift and go to state 1
    FunctionList                   shift and go to state 2
    FunctionDecl                   shift and go to state 3
    Type                           shift and go to state 4

state 1

    (0) S' -> Program .



state 2

    (1) Program -> FunctionList .
    (2) FunctionList -> FunctionList . FunctionDecl
    (4) FunctionDecl -> . Type ID ( ParamList ) Block
    (5) FunctionDecl -> . Type ID ( ) Block
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    $end            reduce using rule 1 (Program -> FunctionList .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    FunctionDecl                   shift and go to state 8
    Type                           shift and go to state 4

state 3

    (3) FunctionList -> FunctionDecl .

    INT             reduce using rule 3 (FunctionList -> FunctionDecl .)
    FLOAT           reduce using rule 3 (FunctionList -> FunctionDecl .)
    VOID            reduce using rule 3 (FunctionList -> FunctionDecl .)
    $end            reduce using rule 3 (FunctionList -> FunctionDecl .)


state 4

    (4) FunctionDecl -> Type . ID ( ParamList ) Block
    (5) FunctionDecl -> Type . ID ( ) Block

    ID              shift and go to state 9


state 5

    (13) Type -> INT .

    ID              reduce using rule 13 (Type -> INT .)


state 6

    (14) Type -> FLOAT .

    ID              reduce using rule 14 (Type -> FLOAT .)


state 7

    (15) Type -> VOID .

    ID              reduce using rule 15 (Type -> VOID .)


state 8

    (2) FunctionList -> FunctionList FunctionDecl .

    INT             reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    FLOAT           reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    VOID            reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    $end            reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)


state 9

    (4) FunctionDecl -> Type ID . ( ParamList ) Block
    (5) FunctionDecl -> Type ID . ( ) Block

    (               shift and go to state 10


state 10

    (4) FunctionDecl -> Type ID ( . ParamList ) Block
    (5) FunctionDecl -> Type ID ( . ) Block
    (6) ParamList -> . ParamList , Param
    (7) ParamList -> . Param
    (8) Param -> . Type ID
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    )               shift and go to state 13
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Type                           shift and go to state 11
    ParamList                      shift and go to state 12
    Param                          shift and go to state 14

state 11

    (8) Param -> Type . ID

    ID              shift and go to state 15


state 12

    (4) FunctionDecl -> Type ID ( ParamList . ) Block
    (6) ParamList -> ParamList . , Param

    )               shift and go to state 16
    ,               shift and go to state 17


state 13

    (5) FunctionDecl -> Type ID ( ) . Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 18

state 14

    (7) ParamList -> Param .

    )               reduce using rule 7 (ParamList -> Param .)
    ,               reduce using rule 7 (ParamList -> Param .)


state 15

    (8) Param -> Type ID .

    )               reduce using rule 8 (Param -> Type ID .)
    ,               reduce using rule 8 (Param -> Type ID .)


state 16

    (4) FunctionDecl -> Type ID ( ParamList ) . Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 20

state 17

    (6) ParamList -> ParamList , . Param
    (8) Param -> . Type ID
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Param                          shift and go to state 21
    Type                           shift and go to state 11

state 18

    (5) FunctionDecl -> Type ID ( ) Block .

    INT             reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    FLOAT           reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    VOID            reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    $end            reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)


state 19

    (9) Block -> { . Declarations Statements }
    (10) Declarations -> . Declarations Declaration
    (11) Declarations -> . empty
    (43) empty -> .

    INT             reduce using rule 43 (empty -> .)
    FLOAT           reduce using rule 43 (empty -> .)
    VOID            reduce using rule 43 (empty -> .)
    }               reduce using rule 43 (empty -> .)
    ID              reduce using rule 43 (empty -> .)
    IF              reduce using rule 43 (empty -> .)
    RETURN          reduce using rule 43 (empty -> .)
    {               reduce using rule 43 (empty -> .)

    Declarations                   shift and go to state 22
    empty                          shift and go to state 23

state 20

    (4) FunctionDecl -> Type ID ( ParamList ) Block .

    INT             reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    FLOAT           reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    VOID            reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    $end            reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)


state 21

    (6) ParamList -> ParamList , Param .

    )               reduce using rule 6 (ParamList -> ParamList , Param .)
    ,               reduce using rule 6 (ParamList -> ParamList , Param .)


state 22

    (9) Block -> { Declarations . Statements }
    (10) Declarations -> Declarations . Declaration
    (16) Statements -> . Statements Statement
    (17) Statements -> . empty
    (12) Declaration -> . Type ID ;
    (43) empty -> .
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    }               reduce using rule 43 (empty -> .)
    ID              reduce using rule 43 (empty -> .)
    IF              reduce using rule 43 (empty -> .)
    RETURN          reduce using rule 43 (empty -> .)
    {               reduce using rule 43 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Statements                     shift and go to state 24
    Declaration                    shift and go to state 25
    empty                          shift and go to state 26
    Type                           shift and go to state 27

state 23

    (11) Declarations -> empty .

    INT             reduce using rule 11 (Declarations -> empty .)
    FLOAT           reduce using rule 11 (Declarations -> empty .)
    VOID            reduce using rule 11 (Declarations -> empty .)
    }               reduce using rule 11 (Declarations -> empty .)
    ID              reduce using rule 11 (Declarations -> empty .)
    IF              reduce using rule 11 (Declarations -> empty .)
    RETURN          reduce using rule 11 (Declarations -> empty .)
    {               reduce using rule 11 (Declarations -> empty .)


state 24

    (9) Block -> { Declarations Statements . }
    (16) Statements -> Statements . Statement
    (18) Statement -> . Assignment
    (19) Statement -> . IfStatement
    (20) Statement -> . ReturnStatement
    (21) Statement -> . Block
    (22) Assignment -> . ID = Expression ;
    (23) IfStatement -> . IF ( Expression ) Block
    (24) IfStatement -> . IF ( Expression ) Block ELSE Block
    (25) ReturnStatement -> . RETURN Expression ;
    (9) Block -> . { Declarations Statements }

    }               shift and go to state 28
    ID              shift and go to state 34
    IF              shift and go to state 35
    RETURN          shift and go to state 36
    {               shift and go to state 19

    Statement                      shift and go to state 29
    Assignment                     shift and go to state 30
    IfStatement                    shift and go to state 31
    ReturnStatement                shift and go to state 32
    Block                          shift and go to state 33

state 25

    (10) Declarations -> Declarations Declaration .

    INT             reduce using rule 10 (Declarations -> Declarations Declaration .)
    FLOAT           reduce using rule 10 (Declarations -> Declarations Declaration .)
    VOID            reduce using rule 10 (Declarations -> Declarations Declaration .)
    }               reduce using rule 10 (Declarations -> Declarations Declaration .)
    ID              reduce using rule 10 (Declarations -> Declarations Declaration .)
    IF              reduce using rule 10 (Declarations -> Declarations Declaration .)
    RETURN          reduce using rule 10 (Declarations -> Declarations Declaration .)
    {               reduce using rule 10 (Declarations -> Declarations Declaration .)


state 26

    (17) Statements -> empty .

    }               reduce using rule 17 (Statements -> empty .)
    ID              reduce using rule 17 (Statements -> empty .)
    IF              reduce using rule 17 (Statements -> empty .)
    RETURN          reduce using rule 17 (Statements -> empty .)
    {               reduce using rule 17 (Statements -> empty .)


state 27

    (12) Declaration -> Type . ID ;

    ID              shift and go to state 37


state 28

    (9) Block -> { Declarations Statements } .

    INT             reduce using rule 9 (Block -> { Declarations Statements } .)
    FLOAT           reduce using rule 9 (Block -> { Declarations Statements } .)
    VOID            reduce using rule 9 (Block -> { Declarations Statements } .)
    $end            reduce using rule 9 (Block -> { Declarations Statements } .)
    }               reduce using rule 9 (Block -> { Declarations Statements } .)
    ID              reduce using rule 9 (Block -> { Declarations Statements } .)
    IF              reduce using rule 9 (Block -> { Declarations Statements } .)
    RETURN          reduce using rule 9 (Block -> { Declarations Statements } .)
    {               reduce using rule 9 (Block -> { Declarations Statements } .)
    ELSE            reduce using rule 9 (Block -> { Declarations Statements } .)


state 29

    (16) Statements -> Statements Statement .

    }               reduce using rule 16 (Statements -> Statements Statement .)
    ID              reduce using rule 16 (Statements -> Statements Statement .)
    IF              reduce using rule 16 (Statements -> Statements Statement .)
    RETURN          reduce using rule 16 (Statements -> Statements Statement .)
    {               reduce using rule 16 (Statements -> Statements Statement .)


state 30

    (18) Statement -> Assignment .

    }               reduce using rule 18 (Statement -> Assignment .)
    ID              reduce using rule 18 (Statement -> Assignment .)
    IF              reduce using rule 18 (Statement -> Assignment .)
    RETURN          reduce using rule 18 (Statement -> Assignment .)
    {               reduce using rule 18 (Statement -> Assignment .)


state 31

    (19) Statement -> IfStatement .

    }               reduce using rule 19 (Statement -> IfStatement .)
    ID              reduce using rule 19 (Statement -> IfStatement .)
    IF              reduce using rule 19 (Statement -> IfStatement .)
    RETURN          reduce using rule 19 (Statement -> IfStatement .)
    {               reduce using rule 19 (Statement -> IfStatement .)


state 32

    (20) Statement -> ReturnStatement .

    }               reduce using rule 20 (Statement -> ReturnStatement .)
    ID              reduce using rule 20 (Statement -> ReturnStatement .)
    IF              reduce using rule 20 (Statement -> ReturnStatement .)
    RETURN          reduce using rule 20 (Statement -> ReturnStatement .)
    {               reduce using rule 20 (Statement -> ReturnStatement .)


state 33

    (21) Statement -> Block .

    }               reduce using rule 21 (Statement -> Block .)
    ID              reduce using rule 21 (Statement -> Block .)
    IF              reduce using rule 21 (Statement -> Block .)
    RETURN          reduce using rule 21 (Statement -> Block .)
    {               reduce using rule 21 (Statement -> Block .)


state 34

    (22) Assignment -> ID . = Expression ;

    =               shift and go to state 38


state 35

    (23) IfStatement -> IF . ( Expression ) Block
    (24) IfStatement -> IF . ( Expression ) Block ELSE Block

    (               shift and go to state 39


state 36

    (25) ReturnStatement -> RETURN . Expression ;
    (26) Expression -> . Expression EQ Relation
    (27) Expression -> . Expression NE Relation
    (28) Expression -> . Expression < Relation
    (29) Expression -> . Expression LE Relation
    (30) Expression -> . Expression > Relation
    (31) Expression -> . Expression GE Relation
    (32) Expression -> . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Expression                     shift and go to state 40
    Relation                       shift and go to state 41
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 37

    (12) Declaration -> Type ID . ;

    ;               shift and go to state 48


state 38

    (22) Assignment -> ID = . Expression ;
    (26) Expression -> . Expression EQ Relation
    (27) Expression -> . Expression NE Relation
    (28) Expression -> . Expression < Relation
    (29) Expression -> . Expression LE Relation
    (30) Expression -> . Expression > Relation
    (31) Expression -> . Expression GE Relation
    (32) Expression -> . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Expression                     shift and go to state 49
    Relation                       shift and go to state 41
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 39

    (23) IfStatement -> IF ( . Expression ) Block
    (24) IfStatement -> IF ( . Expression ) Block ELSE Block
    (26) Expression -> . Expression EQ Relation
    (27) Expression -> . Expression NE Relation
    (28) Expression -> . Expression < Relation
    (29) Expression -> . Expression LE Relation
    (30) Expression -> . Expression > Relation
    (31) Expression -> . Expression GE Relation
    (32) Expression -> . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Expression                     shift and go to state 50
    Relation                       shift and go to state 41
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 40

    (25) ReturnStatement -> RETURN Expression . ;
    (26) Expression -> Expression . EQ Relation
    (27) Expression -> Expression . NE Relation
    (28) Expression -> Expression . < Relation
    (29) Expression -> Expression . LE Relation
    (30) Expression -> Expression . > Relation
    (31) Expression -> Expression . GE Relation

    ;               shift and go to state 51
    EQ              shift and go to state 52
    NE              shift and go to state 53
    <               shift and go to state 54
    LE              shift and go to state 55
    >               shift and go to state 56
    GE              shift and go to state 57


state 41

    (32) Expression -> Relation .
    (33) Relation -> Relation . + Term
    (34) Relation -> Relation . - Term

    ;               reduce using rule 32 (Expression -> Relation .)
    EQ              reduce using rule 32 (Expression -> Relation .)
    NE              reduce using rule 32 (Expression -> Relation .)
    <               reduce using rule 32 (Expression -> Relation .)
    LE              reduce using rule 32 (Expression -> Relation .)
    >               reduce using rule 32 (Expression -> Relation .)
    GE              reduce using rule 32 (Expression -> Relation .)
    )               reduce using rule 32 (Expression -> Relation .)
    +               shift and go to state 58
    -               shift and go to state 59


state 42

    (35) Relation -> Term .
    (36) Term -> Term . * Factor
    (37) Term -> Term . / Factor

    +               reduce using rule 35 (Relation -> Term .)
    -               reduce using rule 35 (Relation -> Term .)
    ;               reduce using rule 35 (Relation -> Term .)
    EQ              reduce using rule 35 (Relation -> Term .)
    NE              reduce using rule 35 (Relation -> Term .)
    <               reduce using rule 35 (Relation -> Term .)
    LE              reduce using rule 35 (Relation -> Term .)
    >               reduce using rule 35 (Relation -> Term .)
    GE              reduce using rule 35 (Relation -> Term .)
    )               reduce using rule 35 (Relation -> Term .)
    *               shift and go to state 60
    /               shift and go to state 61


state 43

    (38) Term -> Factor .

    *               reduce using rule 38 (Term -> Factor .)
    /               reduce using rule 38 (Term -> Factor .)
    +               reduce using rule 38 (Term -> Factor .)
    -               reduce using rule 38 (Term -> Factor .)
    ;               reduce using rule 38 (Term -> Factor .)
    EQ              reduce using rule 38 (Term -> Factor .)
    NE              reduce using rule 38 (Term -> Factor .)
    <               reduce using rule 38 (Term -> Factor .)
    LE              reduce using rule 38 (Term -> Factor .)
    >               reduce using rule 38 (Term -> Factor .)
    GE              reduce using rule 38 (Term -> Factor .)
    )               reduce using rule 38 (Term -> Factor .)


state 44

    (39) Factor -> INTLIT .

    *               reduce using rule 39 (Factor -> INTLIT .)
    /               reduce using rule 39 (Factor -> INTLIT .)
    +               reduce using rule 39 (Factor -> INTLIT .)
    -               reduce using rule 39 (Factor -> INTLIT .)
    ;               reduce using rule 39 (Factor -> INTLIT .)
    EQ              reduce using rule 39 (Factor -> INTLIT .)
    NE              reduce using rule 39 (Factor -> INTLIT .)
    <               reduce using rule 39 (Factor -> INTLIT .)
    LE              reduce using rule 39 (Factor -> INTLIT .)
    >               reduce using rule 39 (Factor -> INTLIT .)
    GE              reduce using rule 39 (Factor -> INTLIT .)
    )               reduce using rule 39 (Factor -> INTLIT .)


state 45

    (40) Factor -> FLOATLIT .

    *               reduce using rule 40 (Factor -> FLOATLIT .)
    /               reduce using rule 40 (Factor -> FLOATLIT .)
    +               reduce using rule 40 (Factor -> FLOATLIT .)
    -               reduce using rule 40 (Factor -> FLOATLIT .)
    ;               reduce using rule 40 (Factor -> FLOATLIT .)
    EQ              reduce using rule 40 (Factor -> FLOATLIT .)
    NE              reduce using rule 40 (Factor -> FLOATLIT .)
    <               reduce using rule 40 (Factor -> FLOATLIT .)
    LE              reduce using rule 40 (Factor -> FLOATLIT .)
    >               reduce using rule 40 (Factor -> FLOATLIT .)
    GE              reduce using rule 40 (Factor -> FLOATLIT .)
    )               reduce using rule 40 (Factor -> FLOATLIT .)


state 46

    (41) Factor -> ID .

    *               reduce using rule 41 (Factor -> ID .)
    /               reduce using rule 41 (Factor -> ID .)
    +               reduce using rule 41 (Factor -> ID .)
    -               reduce using rule 41 (Factor -> ID .)
    ;               reduce using rule 41 (Factor -> ID .)
    EQ              reduce using rule 41 (Factor -> ID .)
    NE              reduce using rule 41 (Factor -> ID .)
    <               reduce using rule 41 (Factor -> ID .)
    LE              reduce using rule 41 (Factor -> ID .)
    >               reduce using rule 41 (Factor -> ID .)
    GE              reduce using rule 41 (Factor -> ID .)
    )               reduce using rule 41 (Factor -> ID .)


state 47

    (42) Factor -> ( . Expression )
    (26) Expression -> . Expression EQ Relation
    (27) Expression -> . Expression NE Relation
    (28) Expression -> . Expression < Relation
    (29) Expression -> . Expression LE Relation
    (30) Expression -> . Expression > Relation
    (31) Expression -> . Expression GE Relation
    (32) Expression -> . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Expression                     shift and go to state 62
    Relation                       shift and go to state 41
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 48

    (12) Declaration -> Type ID ; .

    INT             reduce using rule 12 (Declaration -> Type ID ; .)
    FLOAT           reduce using rule 12 (Declaration -> Type ID ; .)
    VOID            reduce using rule 12 (Declaration -> Type ID ; .)
    }               reduce using rule 12 (Declaration -> Type ID ; .)
    ID              reduce using rule 12 (Declaration -> Type ID ; .)
    IF              reduce using rule 12 (Declaration -> Type ID ; .)
    RETURN          reduce using rule 12 (Declaration -> Type ID ; .)
    {               reduce using rule 12 (Declaration -> Type ID ; .)


state 49

    (22) Assignment -> ID = Expression . ;
    (26) Expression -> Expression . EQ Relation
    (27) Expression -> Expression . NE Relation
    (28) Expression -> Expression . < Relation
    (29) Expression -> Expression . LE Relation
    (30) Expression -> Expression . > Relation
    (31) Expression -> Expression . GE Relation

    ;               shift and go to state 63
    EQ              shift and go to state 52
    NE              shift and go to state 53
    <               shift and go to state 54
    LE              shift and go to state 55
    >               shift and go to state 56
    GE              shift and go to state 57


state 50

    (23) IfStatement -> IF ( Expression . ) Block
    (24) IfStatement -> IF ( Expression . ) Block ELSE Block
    (26) Expression -> Expression . EQ Relation
    (27) Expression -> Expression . NE Relation
    (28) Expression -> Expression . < Relation
    (29) Expression -> Expression . LE Relation
    (30) Expression -> Expression . > Relation
    (31) Expression -> Expression . GE Relation

    )               shift and go to state 64
    EQ              shift and go to state 52
    NE              shift and go to state 53
    <               shift and go to state 54
    LE              shift and go to state 55
    >               shift and go to state 56
    GE              shift and go to state 57


state 51

    (25) ReturnStatement -> RETURN Expression ; .

    }               reduce using rule 25 (ReturnStatement -> RETURN Expression ; .)
    ID              reduce using rule 25 (ReturnStatement -> RETURN Expression ; .)
    IF              reduce using rule 25 (ReturnStatement -> RETURN Expression ; .)
    RETURN          reduce using rule 25 (ReturnStatement -> RETURN Expression ; .)
    {               reduce using rule 25 (ReturnStatement -> RETURN Expression ; .)


state 52

    (26) Expression -> Expression EQ . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Relation                       shift and go to state 65
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 53

    (27) Expression -> Expression NE . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Relation                       shift and go to state 66
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 54

    (28) Expression -> Expression < . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Relation                       shift and go to state 67
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 55

    (29) Expression -> Expression LE . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Relation                       shift and go to state 68
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 56

    (30) Expression -> Expression > . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Relation                       shift and go to state 69
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 57

    (31) Expression -> Expression GE . Relation
    (33) Relation -> . Relation + Term
    (34) Relation -> . Relation - Term
    (35) Relation -> . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Relation                       shift and go to state 70
    Term                           shift and go to state 42
    Factor                         shift and go to state 43

state 58

    (33) Relation -> Relation + . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Term                           shift and go to state 71
    Factor                         shift and go to state 43

state 59

    (34) Relation -> Relation - . Term
    (36) Term -> . Term * Factor
    (37) Term -> . Term / Factor
    (38) Term -> . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Term                           shift and go to state 72
    Factor                         shift and go to state 43

state 60

    (36) Term -> Term * . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Factor                         shift and go to state 73

state 61

    (37) Term -> Term / . Factor
    (39) Factor -> . INTLIT
    (40) Factor -> . FLOATLIT
    (41) Factor -> . ID
    (42) Factor -> . ( Expression )

    INTLIT          shift and go to state 44
    FLOATLIT        shift and go to state 45
    ID              shift and go to state 46
    (               shift and go to state 47

    Factor                         shift and go to state 74

state 62

    (42) Factor -> ( Expression . )
    (26) Expression -> Expression . EQ Relation
    (27) Expression -> Expression . NE Relation
    (28) Expression -> Expression . < Relation
    (29) Expression -> Expression . LE Relation
    (30) Expression -> Expression . > Relation
    (31) Expression -> Expression . GE Relation

    )               shift and go to state 75
    EQ              shift and go to state 52
    NE              shift and go to state 53
    <               shift and go to state 54
    LE              shift and go to state 55
    >               shift and go to state 56
    GE              shift and go to state 57


state 63

    (22) Assignment -> ID = Expression ; .

    }               reduce using rule 22 (Assignment -> ID = Expression ; .)
    ID              reduce using rule 22 (Assignment -> ID = Expression ; .)
    IF              reduce using rule 22 (Assignment -> ID = Expression ; .)
    RETURN          reduce using rule 22 (Assignment -> ID = Expression ; .)
    {               reduce using rule 22 (Assignment -> ID = Expression ; .)


state 64

    (23) IfStatement -> IF ( Expression ) . Block
    (24) IfStatement -> IF ( Expression ) . Block ELSE Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 76

state 65

    (26) Expression -> Expression EQ Relation .
    (33) Relation -> Relation . + Term
    (34) Relation -> Relation . - Term

    ;               reduce using rule 26 (Expression -> Expression EQ Relation .)
    EQ              reduce using rule 26 (Expression -> Expression EQ Relation .)
    NE              reduce using rule 26 (Expression -> Expression EQ Relation .)
    <               reduce using rule 26 (Expression -> Expression EQ Relation .)
    LE              reduce using rule 26 (Expression -> Expression EQ Relation .)
    >               reduce using rule 26 (Expression -> Expression EQ Relation .)
    GE              reduce using rule 26 (Expression -> Expression EQ Relation .)
    )               reduce using rule 26 (Expression -> Expression EQ Relation .)
    +               shift and go to state 58
    -               shift and go to state 59


state 66

    (27) Expression -> Expression NE Relation .
    (33) Relation -> Relation . + Term
    (34) Relation -> Relation . - Term
